focus visibility fixed

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none !important;
 }
 
 a:hover {
@@ -472,9 +471,6 @@ nav .caret {
     background: rgba(0, 0, 0, .3);
 }
 
-button {
-    outline: none !important;
-}
 
 .btn-rd {
     border-radius: 40px;
